playlist wrap bug resolved

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                             src="https://i.scdn.co/image/ab67616d00001e0214691359e2723059bbec9cde"
                             data-testid="card-image" alt=""
                             class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 Yn2Ei5QZn19gria6LjZj" height="150px">
-                        <h2 class="songName"></h2>
-                        <p></p>
+                        <!-- <h2 class="songName"></h2>
+                        <p></p> -->
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -138,8 +138,8 @@
                             data-testid="card-image" alt=""
                             class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2 class="songName"></h2>
-                        <p></p>
+                        <!-- <h2 class="songName"></h2>
+                        <p></p> -->
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -180,8 +180,8 @@
                             class="mMx2LUixlnN_Fu45JpFB CmkY1Ag0tJDfnFXbGgju _EShSNaBK1wUIaZQFJJQ Yn2Ei5QZn19gria6LjZj"
                             srcset="https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e 150w, https://i.scdn.co/image/ab67616d00001e02c8e97cafeb2acb85b21a777e 300w, https://i.scdn.co/image/ab67616d0000b273c8e97cafeb2acb85b21a777e 320w, https://i.scdn.co/image/ab67616d0000b273c8e97cafeb2acb85b21a777e 640w"
                             sizes="(min-width: 1280px) 232px, 192px" height="150vh">
-                        <h2 class="songName"></h2>
-                        <p></p>
+                        <!-- <h2 class="songName"></h2>
+                        <p></p> -->
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -201,8 +201,8 @@
                             data-testid="card-image" alt=""
                             class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2 class="songName"></h2>
-                        <p></p>
+                        <!-- <h2 class="songName"></h2>
+                        <p></p> -->
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -222,8 +222,8 @@
                             data-testid="card-image" alt=""
                             class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2 class="songName"></h2>
-                        <p></p>
+                        <!-- <h2 class="songName"></h2>
+                        <p></p> -->
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -243,8 +243,8 @@
                             data-testid="card-image" alt=""
                             class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2 class="songName"></h2>
-                        <p></p>
+                        <!-- <h2 class="songName"></h2>
+                        <p></p> -->
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -264,8 +264,8 @@
                             data-testid="card-image" alt=""
                             class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2 class="songName"></h2>
-                        <p></p>
+                        <!-- <h2 class="songName"></h2>
+                        <p></p> -->
                     </div>
                     <div class="card">
                         <div class="playdiv">
@@ -285,8 +285,8 @@
                             data-testid="card-image" alt=""
                             class="mMx2LUixlnN_Fu45JpFB yMQTWVwLJ5bV8VGiaqU3 yOKoknIYYzAE90pe7_SE Yn2Ei5QZn19gria6LjZj"
                             height="150vh">
-                        <h2 class="songName"></h2>
-                        <p></p>
+                        <!-- <h2 class="songName"></h2>
+                        <p></p> -->
                     </div>
                     <div class="card">
                         <div class="playdiv">
